--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
         </div>
 		
-		window.alert("Welcome to Tulsa");
+	
 
         <!-- Score section -->
         <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="score">
@@ -339,6 +339,9 @@ Author (Writer' Editor)<br />
             document.getElementById("modal01").style.display = "block";
             var captionText = document.getElementById("caption");
             captionText.innerHTML = element.alt;
+			
+				window.alert("Welcome to wvc");
+			
         }
 
     </script>
