--- a/index.html
+++ b/index.html
@@ -326,11 +326,17 @@ Author (Writer' Editor)<br />
         function w3_open() {
             document.getElementById("mySidebar").style.display = "block";
             document.getElementById("myOverlay").style.display = "block";
+			
+			window.alert("Welcome to open");
+			
+			
         }
 
         function w3_close() {
             document.getElementById("mySidebar").style.display = "none";
             document.getElementById("myOverlay").style.display = "none";
+			
+			window.alert("Welcome to wvclose");
         }
 
         // Modal Image Gallery
