--- a/index.html
+++ b/index.html
@@ -346,21 +346,21 @@ Author (Writer' Editor)<br />
             var captionText = document.getElementById("caption");
             captionText.innerHTML = element.alt;
 			
-				window.alert("Welcome to wvc");
-			
-			
+				
+			var imgSrc = Image.src;
+			window.alert(imgsrc + "  Welcome to wvc");
 			
         <!-- Score section -->
         <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="score">
             <h4><b>Score</b></h4>
-            <img src="./ColorOfNight.gif" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
+            <img src="imgSrc" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
             <div class="w3-content w3-justify" style="max-width:600px">
                 <h4>Score </h4>
 
       <div class="w3-row-padding" style="margin:0 -16px">
                     <div class="w3-half w3-margin-bottom">
                         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-                            <li class="w3-black w3-xlarge w3-padding-32">Contestant</li>
+	<li class="w3-black w3-xlarge w3-padding-32">Contestant</li>
 <li class="w3-padding-16">
 <div class="formRow">
 <label for="title">Contestant video title*</label>
