--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ value="60" step="1" min="1" max="99" />
 
                     <div class="w3-half">
                         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-                            <li class="w3-black w3-xlarge w3-padding-32">Your Scoring Sheet</li>
+    <li class="w3-black w3-xlarge w3-padding-32">Your Scoring Sheet</li>
  <li class="w3-padding-16">
   <div class="formRow">
 <label for="visit">Date of Scoring</label>
@@ -346,107 +346,7 @@ Author (Writer' Editor)<br />
             var captionText = document.getElementById("caption");
             captionText.innerHTML = element.alt;
 			
-				
-			var imgSrc = Image.src;
-			window.alert(imgsrc + "  Welcome to wvc");
-			
-        <!-- Score section -->
-        <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="score">
-            <h4><b>Score</b></h4>
-            <img src="imgSrc" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
-            <div class="w3-content w3-justify" style="max-width:600px">
-                <h4>Score </h4>
-
-      <div class="w3-row-padding" style="margin:0 -16px">
-                    <div class="w3-half w3-margin-bottom">
-                        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-	<li class="w3-black w3-xlarge w3-padding-32">Contestant</li>
-<li class="w3-padding-16">
-<div class="formRow">
-<label for="title">Contestant video title*</label>
-<input name="custTitle" id="title" type="text"  value="ColorOfNight" />
-</div>
-</li>
-                            <li class="w3-padding-16">
-<div class="formRow">
-<label for="dineSpin">The Score toward the performer artist:</label>
-<input name="dineOut" id="dineSpin" type="number"
-value="60" step="1" min="1" max="99" />
-</div>
-                            </li>
-<div class="formRow">
-<label for="order">Contestant type</label>
-<select name="orderType" id="order">
-<option value="order1">Dancer (Group' Choreographer)</option>
-<option value="order2">Painter (Sculptor)</option>
-<option value="order3" selected>Singer (Group' Composer' Lyric Writer)</option>
-<option value="order4">Show Host (Producer)</option>
-<option value="order5">Author (Writer' Editor)</option>
-</select>
-</div>
-   
-                        </ul>
-                    </div>
-
-                    <div class="w3-half">
-                        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-    <li class="w3-black w3-xlarge w3-padding-32">Your Scoring Sheet</li>
- <li class="w3-padding-16">
-  <div class="formRow">
-<label for="visit">Date of Scoring</label>
-<input name="visitDate" id="visit" type="date" />
-</div>
- </li>
- <li class="w3-padding-16">                                
- <div class="formRow">
-<label>Do you like to raise your bonus?</label>
-<fieldset class="optGroup">
-<label for="cYes">Yes</label>
-<input name="oCorrect" id="cYes" value="yes"
-type="radio" />
-<label for="cNo">No</label>
-<input name="oCorrect" id="cNo" value="no"
-type="radio" />
-</fieldset>
-</div>
- </li>
-<li class="w3-padding-16">
-<div class="formRow">
-<label for="bonusSpin">The bonus toward to your performer in amount: $</label>
-<input name="bonusOut" id="bonusSpin" type="number"
-value="1" step="1" min="1" max="9999" />
-</div>
-</li>
- <li class="w3-padding-16">
-<div class="formRow">
-<label for="name">The bonus toward to your performer artist (group) name:</label>
-<input name="favorName" id="contestantName" type="text" placeholder="ColorOfNight"  />
-</div>
- </li>
-                            <li class="w3-padding-16">
-                     
-<div class="formRow">
-<label for="phone">Your contact phone*</label>
-<input name="custPhone" id="phone" type="tel" placeholder="(nnn) nnn-nnnn" />
-</div>  
-<div class="formRow">
-<label for="mail">E-mail*</label>
-<input name="custEmail" id="mail" type="email" required />
-</div>
-                            </li>
-                            <li class="w3-light-grey w3-padding-24">
-                                <button class="w3-button w3-white w3-padding-large">Submit</button>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-			
-			
-			
-			
+				window.alert("Welcome to wvc");
 			
         }
 
